welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:5: error: type mismatch;
 found   : Int
 required: Boolean
  if (d>=10 || e>=10 || f>==10) {
                        ^